--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,12 +31,13 @@ jobs:
       uses: docker/metadata-action@v5
       with:
         images:
-          ${{ input.dockerhub_path }}
+          ${{ inputs.dockerhub_path }}
 
     - name: Build and push Docker images
       uses: docker/build-push-action@v5
       with:
         context: .
+        file: ${{ inputs.dockerfile-path }}
         push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
