Remove pointless echo
I thought this was part of the last commit..

--- a/VSCode-Server/Dockerfile
+++ b/VSCode-Server/Dockerfile
@@ -10,4 +10,4 @@ ENV DONT_PROMPT_WSL_INSTALL=true
 RUN useradd -ms /bin/bash vscode
 USER vscode
 WORKDIR /home/vscode
-ENTRYPOINT echo "Y" | code tunnel --accept-server-license-terms
+ENTRYPOINT code tunnel --accept-server-license-terms
