--- a/VSCode-Server/Dockerfile
+++ b/VSCode-Server/Dockerfile
@@ -5,15 +5,18 @@ RUN apt update && apt install -y curl git libc6 libstdc++6 ca-certificates opens
 # Install VSCode CLI
 RUN \
 curl -Lk 'https://code.visualstudio.com/sha/download?build=stable&os=cli-alpine-x64' --output vscode_cli.tar.gz && \
-tar -xf vscode_cli.tar.gz
+tar -xf vscode_cli.tar.gz && \
+rm -r vscode_cli.tar.gz
 
 # Personal requirements
 RUN apt install -y wget
 
 # Prep VSCode and define entry
 ENV DONT_PROMPT_WSL_INSTALL=true
+ENV VSCODE_CLI_DATA_DIR=/vscode
 
-RUN useradd -m vscode && mv /code /home/vscode/code
+RUN useradd -m vscode
+RUN mkdir /vscode && chown -R vscode: /vscode
 USER vscode
 WORKDIR /home/vscode
-ENTRYPOINT ./code tunnel --accept-server-license-terms
+ENTRYPOINT /code tunnel --accept-server-license-terms
