Attempt fixing user

--- a/VSCode-Server/Dockerfile
+++ b/VSCode-Server/Dockerfile
@@ -2,11 +2,7 @@ FROM debian:stable
 # Requirements for VSCode
 RUN apt update && apt install -y --no-install-recommends curl git gpg libc6 libstdc++6 ca-certificates openssh-server
 
-# Install VSCode CLI
-#RUN \
-#curl -Lk 'https://code.visualstudio.com/sha/download?build=stable&os=cli-alpine-x64' --output vscode_cli.tar.gz && \
-#tar -xf vscode_cli.tar.gz && \
-#rm -r vscode_cli.tar.gz
+# Install VSCode
 RUN \
 curl -Lk 'https://code.visualstudio.com/sha/download?build=stable&os=linux-deb-x64' --output vscode.deb && \
 apt install -y --no-install-recommends /vscode.deb && \
@@ -22,6 +18,6 @@ ENV VSCODE_CLI_DATA_DIR=/home/vscode
 
 RUN useradd -m vscode
 RUN mkdir /vscode && chown -R vscode: /vscode
-#USER vscode
+USER vscode
 WORKDIR /vscode
-ENTRYPOINT code --extensions-dir=/vscode/extensions --user-data-dir=/vscode/userdata tunnel --accept-server-license-terms
+ENTRYPOINT code tunnel --accept-server-license-terms
