--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,7 +32,9 @@ jobs:
       with:
         images:
           ${{ inputs.dockerhub-path }}
-        tags: type=raw,value=latest,enable={{is_default_branch}}
+        tags: 
+          type=raw,value=latest,priority=700,enable={{is_default_branch}}
+          type=ref,enable=true,priority=600,prefix=,suffix=,event=branch
 
     - name: Build and push Docker images
       uses: docker/build-push-action@v5
