Redo all changes lost in force push
Stuff like this is why force pushing is very dangerous and I had it disabled. I just wanted to remove the mess I made with workflow commits and messed everything up.

--- a/VSCode-Server/Dockerfile
+++ b/VSCode-Server/Dockerfile
@@ -1,27 +1,21 @@
 FROM debian:stable
-
 # Requirements for VSCode
 RUN apt update && apt install -y --no-install-recommends curl git libc6 libstdc++6 ca-certificates openssh-server
 
 # Install VS Code
 RUN \
-curl -Lk 'https://code.visualstudio.com/sha/download?build=stable&os=cli-alpine-x64' --output vscode_cli.tar.gz && \
-tar -xf vscode_cli.tar.gz && \
+curl -Lk 'https://code.visualstudio.com/sha/download?build=insider&os=cli-alpine-x64' --output vscode_cli.tar.gz && \
+tar -xf vscode_cli.tar.gz -C /usr/bin && \
 rm -r vscode_cli.tar.gz
 
 # Personal requirements
-RUN apt install --no-install-recommends -y wget
+RUN apt install --no-install-recommends -y wget python3 openjdk-17-jdk-headless
 
-ENV VSCODE_CLI_DATA_DIR=/vscode/cli
-ENV USER=vscode
-ENV UID=1199
+RUN mkdir /vscode-cli && mkdir /data
+ENV VSCODE_CLI_DATA_DIR=/vscode-cli
+ENV VSCODE_CLI_USE_FILE_KEYCHAIN=1
+ENV TUNNEL_NAME=docker_tunnel
+ENV LOG_LEVEL=debug
 
-RUN \
-mkdir /userdata && mkdir /vscode && \
-adduser --uid $UID $USER && \
-chown -R :$USER /userdata && \
-chown -R :$USER /vscode
-
-USER $USER
-WORKDIR /userdata
-ENTRYPOINT /code tunnel --accept-server-license-terms
+WORKDIR /data
+ENTRYPOINT code-insiders tunnel --name $TUNNEL_NAME --log $LOG_LEVEL --accept-server-license-terms
