--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,6 +9,8 @@ on:
       dockerhub-path:
         required: true
         type: string
+env:
+  IS_DEFAULT_BRANCH: ${{ github.ref_name == github.event.repository.default_branch }}
 
 jobs:
 
@@ -32,7 +34,9 @@ jobs:
       with:
         images:
           ${{ inputs.dockerhub-path }}
-        tags: type=raw,value=latest,enable={{is_default_branch}}
+        tags: |
+          type=raw,value=latest,enable=${{ env.IS_DEFAULT_BRANCH }}
+          type=ref,event=branch,enable=${{ env.IS_DEFAULT_BRANCH == 'false' }}
 
     - name: Build and push Docker images
       uses: docker/build-push-action@v5
