--- a/nginx/preconfig/defaults/nginx/sites/default.conf
+++ b/nginx/preconfig/defaults/nginx/sites/default.conf
@@ -1,9 +1,6 @@
 server {
-    listen 80 default_server;
-    listen [::]:80 default_server;
-
-    listen 443 ssl default_server;
-    listen [::]:443 ssl default_server;
+    listen 443 quic reuseport;
+    listen 443 ssl;
 
     server_name _;
 
@@ -29,6 +26,10 @@ server {
 
     root /config/www;
     index default.html;
+
+    location / {
+        add_header Alt-Svc 'h3=":$server_port"; ma=86400';
+    }
 
     location ~ /\.ht {
         deny all;
