--- a/nginx/preconfig/defaults/nginx/nginx.conf
+++ b/nginx/preconfig/defaults/nginx/nginx.conf
@@ -29,6 +29,8 @@ http {
 
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
+    
+    add_header Alt-Svc 'h3=":$server_port"; ma=86400';
 
     #access_log /config/log/nginx/access.log;
     #error_log /config/log/nginx/error.log;
