Move SSL to its own directory for mounting
Move SSL into its own directory so it can be mounted and an external service, like a Lets Encrypt Docker can be used to generate SSL certificates if needed.

--- a/nginx/preconfig/defaults/nginx/sites/default.conf
+++ b/nginx/preconfig/defaults/nginx/sites/default.conf
@@ -4,8 +4,8 @@ server {
 
     server_name _;
 
-    ssl_certificate /config/ssl/default/fullkey.pem;
-    ssl_certificate_key /config/ssl/default/privkey.pem;
+    ssl_certificate /ssl/default/fullkey.pem;
+    ssl_certificate_key /ssl/default/privkey.pem;
     ssl_session_timeout 1d;
     ssl_session_cache shared:MozSSL:10m;  # about 40000 sessions
     ssl_session_tickets off;
@@ -22,7 +22,7 @@ server {
     ssl_stapling_verify on;
 
     # verify chain of trust of OCSP response using Root CA and Intermediate certs
-    ssl_trusted_certificate /config/ssl/default/chain.pem;
+    ssl_trusted_certificate /ssl/default/chain.pem;
 
     root /config/www;
     index default.html;
