Move SSL to centralized config

--- a/nginx/preconfig/defaults/nginx/sites/default.conf
+++ b/nginx/preconfig/defaults/nginx/sites/default.conf
@@ -4,25 +4,10 @@ server {
 
     server_name _;
 
-    ssl_certificate /ssl/default/fullkey.pem;
-    ssl_certificate_key /ssl/default/privkey.pem;
-    ssl_session_timeout 1d;
-    ssl_session_cache shared:MozSSL:10m;  # about 40000 sessions
-    ssl_session_tickets off;
-
-    # modern configuration
-    ssl_protocols TLSv1.3;
-    ssl_prefer_server_ciphers off;
-
     # HSTS (ngx_http_headers_module is required) (63072000 seconds)
     add_header Strict-Transport-Security "max-age=63072000" always;
 
-    # OCSP stapling
-    ssl_stapling on;
-    ssl_stapling_verify on;
-
-    # verify chain of trust of OCSP response using Root CA and Intermediate certs
-    ssl_trusted_certificate /ssl/default/chain.pem;
+    include /config/nginx/ssl-default.conf;
 
     root /config/www;
     index default.html;
