--- a/nginx/preconfig/defaults/nginx/nginx.conf
+++ b/nginx/preconfig/defaults/nginx/nginx.conf
@@ -30,13 +30,10 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
     
-    add_header Alt-Svc 'h3=":$server_port"; ma=86400';
+    include /config/nginx/resolvers.conf;
 
     #access_log /config/log/nginx/access.log;
     #error_log /config/log/nginx/error.log;
-
-    resolver               1.1.1.1 1.0.0.1 8.8.8.8 8.8.4.4 208.67.222.222 208.67.220.220 valid=60s;
-    resolver_timeout       2s;
 
     map $http_upgrade $connection_upgrade {
         default upgrade;
