Nginx - Add log folders and logging

--- a/nginx/preconfig/defaults/nginx/sites/default.conf
+++ b/nginx/preconfig/defaults/nginx/sites/default.conf
@@ -8,6 +8,9 @@ server {
     add_header Strict-Transport-Security "max-age=63072000" always;
 
     include /config/nginx/ssl-default.conf;
+    
+    access_log /config/log/default_access.log;
+    error_log /config/log/default_error.log;
 
     root /config/www;
     index default.html;
