Nginx - Move logs to their own volume

--- a/nginx/preconfig/defaults/nginx/nginx.conf
+++ b/nginx/preconfig/defaults/nginx/nginx.conf
@@ -7,7 +7,7 @@ include /etc/nginx/modules-enabled/*.conf;
 
 pcre_jit on;
 
-error_log /dev/null; # Change after setting up log dirs
+error_log /log/nginx/error.log warn;
 
 events {
     multi_accept on;
