--- a/nginx/preconfig/defaults/nginx/sites/default.conf
+++ b/nginx/preconfig/defaults/nginx/sites/default.conf
@@ -9,8 +9,8 @@ server {
 
     include /config/nginx/ssl-default.conf;
     
-    access_log /config/log/default_access.log;
-    error_log /config/log/default_error.log;
+    access_log /log/default_access.log;
+    error_log /log/default_error.log;
 
     root /config/www;
     index default.html;
