Workflow - Add stable tag

--- a/.github/workflows/update-dockers.yml
+++ b/.github/workflows/update-dockers.yml
@@ -86,6 +86,7 @@ jobs:
             ${{ env.image-path }}
           tags: |
             type=raw,value=latest
+            type=raw,value=stable,enable=${{ env.IS_DEFAULT_BRANCH == 'true' }}
             type=ref,event=branch,enable=${{ env.IS_DEFAULT_BRANCH == 'false' }}
 
       - name: Build and push Docker images
