--- a/nginx/preconfig/defaults/nginx/sites/default-proxy.conf
+++ b/nginx/preconfig/defaults/nginx/sites/default-proxy.conf
@@ -10,8 +10,8 @@ server {
     set $server "example.com";
     set $port 443;
     
-    access_log /config/log/default_proxy_access.log;
-    error_log /config/log/default_proxy_error.log;
+    access_log /log/default_access.log;
+    error_log /log/default_error.log;
     
     include /config/nginx/proxy/directives.conf;
 
