Nginx - Comment out default auth

--- a/nginx/preconfig/defaults/nginx/sites/default-proxy.conf
+++ b/nginx/preconfig/defaults/nginx/sites/default-proxy.conf
@@ -18,11 +18,11 @@ server {
     location / {
         proxy_pass $forward_scheme://$server:$port;
         
-        include /config/nginx/auth/root.conf;
+        #include /config/nginx/auth/root.conf;
         include /config/nginx/headers.conf;
         include /config/nginx/proxy/headers.conf;
     }
     
-    include /config/nginx/auth/locations.conf;
+    #include /config/nginx/auth/locations.conf;
     include /config/nginx/headers.conf;
 }
