--- a/nginx/preconfig/defaults/nginx/proxy/headers.conf
+++ b/nginx/preconfig/defaults/nginx/proxy/headers.conf
@@ -7,4 +7,4 @@ proxy_set_header X-Real-IP $remote_addr;
 
 
 proxy_set_header Upgrade $http_upgrade;
-proxy_set_header Connection "upgrade";
+proxy_set_header Connection "Upgrade";
