Nginx - Add http redirect and proxy ssl directives

--- a/nginx/preconfig/defaults/nginx/nginx.conf
+++ b/nginx/preconfig/defaults/nginx/nginx.conf
@@ -32,6 +32,8 @@ http {
     
     include /config/nginx/resolvers.conf;
 
+    include /config/nginx/redirect-http.conf;
+
     map $http_upgrade $connection_upgrade {
         default upgrade;
         ""      close;
