--- a/nginx/preconfig/defaults/nginx/auth/locations.conf
+++ b/nginx/preconfig/defaults/nginx/auth/locations.conf
@@ -9,6 +9,7 @@ location /outpost.goauthentik.io {
     proxy_set_header Content-Length "";
     
     include /config/nginx/headers.conf;
+    include /config/nginx/proxy/ssl_directives.conf;
 }
 
 location @goauthentik_proxy_signin {
