--- a/.github/workflows/update-dockers.yml
+++ b/.github/workflows/update-dockers.yml
@@ -71,7 +71,7 @@ jobs:
 
       - name: Check out the repo
         uses: actions/checkout@v4
-        
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -100,5 +100,5 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
+          cache-from: type=gha, scope=${{ env.dockerfile-path }}
           cache-to: type=gha, mode=max, scope=${{ env.dockerfile-path }}
