LocalAI - Try to fix function calls not working

--- a/LocalAI/Dockerfile
+++ b/LocalAI/Dockerfile
@@ -2,6 +2,7 @@ ARG BUILD_DISTRO=ubuntu
 ARG FINAL_DISTRO=alpine
 ARG UBUNTU_TAG=20.04
 ARG ALPINE_TAG=latest
+ARG APP_DIR=build
 
 ARG GRPC_BACKENDS=backend-assets/grpc/llama-cpp
 ARG GRPC_VERSION=v1.58.0
@@ -97,6 +98,7 @@ ARG CUDA_MAJOR_VERSION=11
 ARG CUDA_MINOR_VERSION=7
 ARG TARGETARCH
 ARG TARGETVARIANT
+ARG GRPC_VERSION
 
 ENV BUILD_TYPE=${BUILD_TYPE}
 ENV EXTERNAL_GRPC_BACKENDS=
@@ -154,6 +156,7 @@ RUN make build
 
 FROM base-${FINAL_DISTRO} AS final
 ARG HEALTHCHECK_ENDPOINT
+ARG APP_DIR
 
 ENV HEALTHCHECK_ENDPOINT=${HEALTHCHECK_ENDPOINT}
 
@@ -163,19 +166,21 @@ RUN mkdir -p \
     /app/models
 
 COPY --from=localai-builder /build/local-ai /app/local-ai
+COPY --from=localai-builder /build $APP_DIR
 
 COPY --from=grpc /build/grpc/output /usr/local
 ENV PATH=/usr/local/bin:$PATH
 
-COPY root/entrypoint.sh /app/entrypoint.sh
-RUN chmod +x /app/entrypoint.sh
+COPY root/entrypoint.sh /$APP_DIR/entrypoint.sh
+RUN chmod +x /$APP_DIR/entrypoint.sh
 
 # Define the health check command
 HEALTHCHECK --interval=1m --timeout=10m --retries=10 \
   CMD curl -f $HEALTHCHECK_ENDPOINT || exit 1
   
-VOLUME /app/models
+VOLUME /$APP_DIR/models
 EXPOSE 8080
-WORKDIR /app
+WORKDIR /$APP_DIR
 #ENTRYPOINT [ "tail", "-f", "/dev/null" ]
-ENTRYPOINT [ "/app/entrypoint.sh" ]
+RUN echo $APP_DIR
+ENTRYPOINT [ "./entrypoint.sh" ]
