--- a/LocalAI/Dockerfile
+++ b/LocalAI/Dockerfile
@@ -2,6 +2,7 @@ ARG BUILD_DISTRO=ubuntu
 ARG FINAL_DISTRO=alpine
 ARG UBUNTU_TAG=20.04
 ARG ALPINE_TAG=latest
+ARG APP_DIR=app
 
 ARG GRPC_BACKENDS=backend-assets/grpc/llama-cpp
 ARG GRPC_VERSION=v1.58.0
@@ -154,28 +155,29 @@ RUN make build
 
 FROM base-${FINAL_DISTRO} AS final
 ARG HEALTHCHECK_ENDPOINT
+ARG APP_DIR
 
 ENV HEALTHCHECK_ENDPOINT=${HEALTHCHECK_ENDPOINT}
 
 WORKDIR /
 
 RUN mkdir -p \
-    /app/models
+    /$APP_DIR/models
 
-COPY --from=localai-builder /build/local-ai /app/local-ai
+COPY --from=localai-builder /build/local-ai /$APP_DIR/local-ai
 
 COPY --from=grpc /build/grpc/output /usr/local
 ENV PATH=/usr/local/bin:$PATH
 
-COPY root/entrypoint.sh /app/entrypoint.sh
-RUN chmod +x /app/entrypoint.sh
+COPY root/entrypoint.sh /$APP_DIR/entrypoint.sh
+RUN chmod +x /$APP_DIR/entrypoint.sh
 
 # Define the health check command
 HEALTHCHECK --interval=1m --timeout=10m --retries=10 \
   CMD curl -f $HEALTHCHECK_ENDPOINT || exit 1
   
-VOLUME /app/models
+VOLUME /$APP_DIR/models
 EXPOSE 8080
-WORKDIR /app
+WORKDIR /$APP_DIR
 #ENTRYPOINT [ "tail", "-f", "/dev/null" ]
-ENTRYPOINT [ "/app/entrypoint.sh" ]
+ENTRYPOINT [ "./entrypoint.sh" ]
